force-app/main/default/objects/AlertAccountConfiguration__c/AlertAccountConfiguration__c.object-meta.xml
<CustomObject>
    <label>Abilitazioni Alert</label>
    <nameField>
        <displayFormat>AAR-{0000}</displayFormat>
        <label>Abilitazioni Alert</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Abilitazioni Alert</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>