force-app/main/default/objects/AlertAccountConfiguration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relazione con l&apos;Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Abilitazioni Alert</relationshipLabel>
    <relationshipName>Abilitazioni_Alert</relationshipName>
    <type>Lookup</type>
</CustomField>