force-app/main/default/objects/AlertAccountConfiguration__c/fields/ActivationDate__c.field-meta.xml
<CustomField>
    <fullName>ActivationDate__c</fullName>
    <description>Data Attivazione dell&apos;alert</description>
    <label>Data Attivazione</label>
    <type>Date</type>
</CustomField>