force-app/main/default/objects/AlertAccountConfiguration__c/fields/AlertConfiguration__c.field-meta.xml
<CustomField>
    <fullName>AlertConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup alla regola di configurazione dell&apos;Alert.</description>
    <label>Regola Alert</label>
    <referenceTo>AlertConfiguration__c</referenceTo>
    <relationshipLabel>Abilitazioni Alert</relationshipLabel>
    <relationshipName>Abilitazioni_Alert</relationshipName>
    <type>Lookup</type>
</CustomField>