force-app/main/default/objects/AlertAccountConfiguration__c/fields/AlertType__c.field-meta.xml
<CustomField>
    <fullName>AlertType__c</fullName>
    <description>Tipologia Alert: periodo dell&apos;autolettura o l&apos;emissione della bolletta/fattura</description>
    <formula>TEXT(AlertConfiguration__r.AlertType__c)</formula>
    <label>Tipologia Alert</label>
    <type>Text</type>
</CustomField>