force-app/main/default/objects/AlertAccountConfiguration__c/fields/InactivationDate__c.field-meta.xml
<CustomField>
    <fullName>InactivationDate__c</fullName>
    <description>Data Disattivazione dell&apos;alert</description>
    <label>Data Disattivazione</label>
    <type>Date</type>
</CustomField>