force-app/main/default/objects/AlertAccountConfiguration__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag per accendere/spegnere l&apos;alert</description>
    <label>Alert Attivo</label>
    <type>Checkbox</type>
</CustomField>