force-app/main/default/objects/AlertAccountConfiguration__c/fields/IsEmailChannelActive__c.field-meta.xml
<CustomField>
    <fullName>IsEmailChannelActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag per accendere/spegnere la delivery dell&apos;alert sul canale Email</description>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>