force-app/main/default/objects/AlertAccountConfiguration__c/fields/IsSmsChannelAllowed__c.field-meta.xml
<CustomField>
    <fullName>IsSmsChannelAllowed__c</fullName>
    <description>Indica se la regola permette il delivery dell&apos;alert sul canale SMS</description>
    <formula>AlertConfiguration__r.IsSmsChannelActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>