force-app/main/default/objects/AlertAccountConfiguration__c/fields/IsSolChannelActive__c.field-meta.xml
<CustomField>
    <fullName>IsSolChannelActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag per accendere/spegnere la delivery dell&apos;alert sul canale SOL</description>
    <label>SOL</label>
    <type>Checkbox</type>
</CustomField>