force-app/main/default/objects/AlertAccountConfiguration__c/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <description>Numero Cellulare esposto dai SOL.</description>
    <label>Cellulare</label>
    <type>Phone</type>
</CustomField>